# fib-js-rust

node/: index.js  package.json
rust/: Cargo.toml  README.md  package.json
rust/src/: lib.rs
